--- a/src/05-components/_text.scss
+++ b/src/05-components/_text.scss
@@ -4,7 +4,8 @@
 //
 // @group Components
 .x-txt {
-	--wrap: normal;
+	--tw: normal;
+	text-align: var(--ta, initial);
 	color: var(--ccl, #{color(dark, 0.7)});
 	&:not([class*="-flx"]):not([class*="x-grd"]):not([class*="__txtAlignF"]) {
 		// Flx
@@ -12,7 +13,7 @@
 	}
 	&:not([class*="__txtA"]) {
 		// Align
-		text-align: left;
+		--ta: left;
 		&:not([class*="__gapi"])
 			> *:not([class*="-flx"]):not([class*="x-grd"]) {
 			// Gaping
